fixed most of white spaces

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,5 @@
 .footer-area {
   border: 1px solid black;
-  margin-top: 100%;
   font-size: 10px;
   text-align: right;
   height: 20px;
