--- a/src/components/ForumList.css
+++ b/src/components/ForumList.css
@@ -1,6 +1,7 @@
 .forum-topic {
   font-size: 13px;
   font-weight: bolder;
+  margin-top: 0;
 }
 
 .forum-titles {
