--- a/src/components/ForumPosts.css
+++ b/src/components/ForumPosts.css
@@ -46,6 +46,11 @@ h2 {
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   padding-top: 10px;
+  margin-top: 0;
+}
+
+.forum-posts {
+  margin-top: 0;
 }
 
 @media screen and (min-width: 768px) {
