--- a/src/components/Forums.css
+++ b/src/components/Forums.css
@@ -56,6 +56,7 @@
   margin-right: 2px;
   margin-left: 2px;
   padding-top: 5px;
+  margin-top: 0;
 }
 
 @media screen and (min-width: 768px) {
