--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,6 +9,7 @@
   font-family: impact, fantasy;
   color: beige;
   margin-left: 3px;
+  margin-top: 0;
 }
 
 #doggy-dialogue-link {
