--- a/src/components/LoginForm.css
+++ b/src/components/LoginForm.css
@@ -45,8 +45,8 @@
   height: 73px;
   width: 150px;
   position: absolute;
-  top: 1px;
   left: 0;
+  bottom: 5%;
 }
 
 @media screen and (min-width: 768px) {
